--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*{
+  box-sizing: border-box;
+}
+
+html{
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+}
+
+#root{
+  height: 100%;
 }
 
 code {
